--- a/boot-service/pom.xml
+++ b/boot-service/pom.xml
@@ -22,5 +22,13 @@
             <groupId>com.zjj</groupId>
             <artifactId>boot-dal</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 </project>
