--- a/boot-web/pom.xml
+++ b/boot-web/pom.xml
@@ -38,6 +38,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
