--- a/boot-web/src/main/resources/application.properties
+++ b/boot-web/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.datasource.maxWait=60000
 spring.datasource.timeBetweenEvictionRunsMillis=60000
 # 配置一个连接在池中最小生存的时间，单位是毫秒
 spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=SELECT 1 FROM DUAL 
+spring.datasource.validationQuery=SELECT 1 FROM DUAL
 spring.datasource.testWhileIdle=true
 spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
@@ -29,6 +29,18 @@ spring.datasource.testOnReturn=false
 spring.datasource.poolPreparedStatements=false
 spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 #配置监控统计拦截的filters
-spring.datasource.filters=stat,wall,log4j 
+spring.datasource.filters=stat,wall,log4j
 #通过connectProperties属性来打开mergeSql功能；慢SQL记录
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
+#freemarker依赖配置
+spring.freemarker.template-loader-path=classpath:/templates/
+spring.freemarker.cache=true
+spring.freemarker.charset=UTF-8
+spring.freemarker.check-template-location=true
+spring.freemarker.content-type=text/html
+spring.freemarker.expose-request-attributes=true
+spring.freemarker.expose-session-attributes=true
+spring.freemarker.request-context-attribute=request
+spring.freemarker.suffix=.ftl
+
