--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
+        <version>4.3.10.RELEASE</version>
+      </dependency>
 
       <!--mybatis-spring-boot-->
       <dependency>
@@ -69,6 +74,12 @@
         <groupId>com.alibaba</groupId>
         <artifactId>druid</artifactId>
         <version>1.0.9</version>
+      </dependency>
+
+      <!--freemarker-->
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-freemarker</artifactId>
       </dependency>
     </dependencies>
   </dependencyManagement>
