--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,7 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context-support</artifactId>
-        <version>4.3.10.RELEASE</version>
-      </dependency>
+      <!--支持@Transactional 使用aspectj的方式对目标类进行增强-->
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-aspects</artifactId>
@@ -72,17 +68,7 @@
       </dependency>
       <dependency>
         <groupId>org.aspectj</groupId>
-        <artifactId>aspectjweaver</artifactId>
-        <version>1.8.9</version>
-      </dependency>
-      <dependency>
-        <groupId>org.aspectj</groupId>
         <artifactId>aspectjrt</artifactId>
-        <version>1.8.9</version>
-      </dependency>
-      <dependency>
-        <groupId>org.aspectj</groupId>
-        <artifactId>aspectjtools</artifactId>
         <version>1.8.9</version>
       </dependency>
 
@@ -107,6 +93,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-freemarker</artifactId>
+        <version>1.4.1.RELEASE</version>
       </dependency>
 
       <!--fastjson-->
